finished stylling on home page

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,5 +2,7 @@
 @import "header";
 @import "hero";
 @import "global";
+@import "custom-card-border";
+@import "cta";
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap/scss/functions";
