--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,3 +6,7 @@
 @import "cta";
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap/scss/functions";
+
+.image {
+  width: 90%;
+}
