--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,7 @@
 @import "global";
 @import "custom-card-border";
 @import "cta";
+@import "custom-circles";
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap/scss/functions";
 
